Fix ob marker position on Safari

--- a/src/css/ScoreCard.css
+++ b/src/css/ScoreCard.css
@@ -133,7 +133,7 @@
 
 .wrap div.obWrapper {
   position: absolute;
-  top: -2px;
+  top: -2.5px;
   left: 0;
   width: 100%;
 }
